--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ ul {
 <p>Department of Computer Science and Engineering<br>IIT Bhilai, India</p>
 <p class="links">
 <a href="mailto:soumajit@iitbhilai.ac.in">Email</a> |
-<a href="https://goo.gl/YWc32U">Google Scholar</a> |
+<a href="https://scholar.google.com/citations?user=XaaHExkAAAAJ&hl=en">Google Scholar</a> |
 <a href="Soumajit_Pramanik_CV.pdf">CV</a>
 </p>
 </div>
@@ -171,9 +171,9 @@ ul {
 <h2>News & Announcements</h2>
 <ul>
 <li><b>2025:</b> Journal paper accepted in <i>Knowledge and Information Systems (KAIS)</i>.</li>
-<li><b>2025:</b> Conference papers accepted at IEEE Sensors and ETAAV.</li>
-<li><b>2024:</b> Journal publication in <i>IEEE Transactions on Network Science and Engineering</i>.</li>
-<li><b>2022:</b> MeitY-funded project on AI-on-Edge for Disaster Management awarded.</li>
+<li><b>2025:</b> Journal paper accepted in <i>IEEE Transactions on Computa-
+tional Biology and Bioinformatics (TCBB)</i>.</li>
+<li><b>2025:</b> Conference papers accepted at IEEE Sensors.</li>
 </ul>
 </section>
 </main>
@@ -185,7 +185,6 @@ ul {
 <b>Email:</b> soumajit@iitbhilai.ac.in<br>
 Department of Computer Science and Engineering<br>
 Indian Institute of Technology Bhilai, Chhattisgarh, India<br>
-<a href="https://goo.gl/YWc32U">Google Scholar</a>
 </p>
 </section>
 
