--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@ ul {
 <h2>News & Announcements</h2>
 <ul>
 <li><b>2025:</b> Journal paper accepted in <i>Knowledge and Information Systems (KAIS)</i>.</li>
-<li><b>2025:</b> Journal paper accepted in <i>IEEE Transactions on Computa-
-tional Biology and Bioinformatics (TCBB)</i>.</li>
+<li><b>2025:</b> Journal paper accepted in <i>IEEE Transactions on Computational Biology and Bioinformatics (TCBB)</i>.</li>
 <li><b>2025:</b> Conference papers accepted at IEEE Sensors.</li>
 </ul>
 </section>
