--- a/publications.html
+++ b/publications.html
@@ -141,7 +141,7 @@ ul {
 </header>
 
 <main class="container">
-<h2>Journal Publications</h2>
+<h2>Selected Journal Publications</h2>
 <ol>
 <li><b>Multilayer Louvain: A Modularity based Community Detection Algorithm for Multilayer Networks</b><br>
 Soumajit Pramanik, Prishni Rateria, Raphael Tackx, Mayank Shukla, Jean-Loup Guillaume, and Bivas Mitra.<br>
@@ -172,7 +172,7 @@ Soumajit Pramanik, Qinna Wang, Maximilien Danisch, Jean-Loup Guillaume, and Biva
 <i>Social Network Analysis and Mining</i>, Springer, 2017.</li>
 </ol>
 
-<h2>Conference Publications</h2>
+<h2>Selected Conference Publications</h2>
 <ol>
 <li><b>Autonomous CO2 Source Detection with UAVs Using Reinforcement Learning</b><br>
 Harshit Kumar Sahu, Pritika Marik, Amit Ruidas, Chiranjib Ghosh, Soumajit Pramanik, and Avishek Adhikary.<br>
