--- a/teaching.html
+++ b/teaching.html
@@ -158,7 +158,7 @@ ul {
 
 <h3>Research Supervision</h3>
 <ul>
-<li>PhD Students
+<li><b>PhD Students:</b>
 <ul>
 <li>Kartikeya Saraswat (Ongoing)</li>
 <li>Khileswar Rajpuriya (Ongoing, Joint)</li>
@@ -167,12 +167,12 @@ ul {
 <li>Sivananda (Ongoing, Joint)</li>
 </ul>
 </li>
-<li>M.Tech / B.Tech (Hons.)
+<li><b>M.Tech / B.Tech (Hons.) Students:</b>
 <ul>
 <li>Byomkesh Panda (Ongoing)</li>
 <li>Sugandh Kumar (Ongoing)</li>
 <li>Rahul Kumar (Ongoing)</li>
-<li>Brishti De (Ongoing)</li>
+<li>Brishti De (Graduated)</li>
 <li>Debarghya Dutta (Graduated)</li>
 <li>Parul Diwakar (Graduated)</li>
 <li>Pallavi Pandey (Graduated)</li>
