--- a/index.html
+++ b/index.html
@@ -158,11 +158,9 @@ ul {
 <section>
 <h2>Research Interests</h2>
 <ul>
-<li>Machine Learning (Deep Learning, Graph Neural Networks)</li>
-<li>Natural Language Processing and Information Retrieval</li>
-<li>Question Answering and Knowledge Graphs</li>
-<li>Computer Vision and Edge AI</li>
-<li>Complex and Multilayer Networks</li>
+<li>Natural Language Processing and Information Retrieval - Question Answering, Knowledge Graphs, and Large Language Models</li>
+<li>Deep Learning, Graph Learning, Federated Learning, Multimodal Learning</li>
+<li>Complex Networks - Social and Multilayer Networks </li>
 </ul>
 </section>
 
@@ -172,7 +170,7 @@ ul {
 <ul>
 <li><b>2025:</b> Journal paper accepted in <i>Knowledge and Information Systems (KAIS)</i>.</li>
 <li><b>2025:</b> Journal paper accepted in <i>IEEE Transactions on Computational Biology and Bioinformatics (TCBB)</i>.</li>
-<li><b>2025:</b> Conference papers accepted at IEEE Sensors.</li>
+<li><b>2025:</b> Conference paper accepted at IEEE Sensors.</li>
 </ul>
 </section>
 </main>
