--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@ ul {
 <section>
 <h2><span class="blink-soft">News & Announcements</span></h2>
 <ul>
-<li><b>2025:</b> Journal paper accepted in <i>Knowledge and Information Systems (KAIS)</i>.</li>
-<li><b>2025:</b> Journal paper accepted in <i>IEEE Transactions on Computational Biology and Bioinformatics (TCBB)</i>.</li>
-<li><b>2025:</b> Conference paper accepted at IEEE Sensors.</li>
+<li><b>Jan'2026:</b> Talk in IIIT Naya Raipur on <i>AI Research Opportunities in India</i> in the <a href="https://www.facebook.com/meityindia/posts/the-digital-india-awareness-workshop-on-indiaai-impact-summit-digital-india-init/1212480397734396/">Digital India Awareness Workshop on IndiaAI Impact Summit & Digital India Initiatives.</a></li>
+<li><b>Nov'2025:</b> Journal paper accepted in <i>Knowledge and Information Systems (KAIS)</i>.</li>
+<li><b>Nov'2025:</b> Journal paper accepted in <i>IEEE Transactions on Computational Biology and Bioinformatics (TCBB)</i>.</li>
 </ul>
 </section>
 </main>
