--- a/publications.html
+++ b/publications.html
@@ -143,13 +143,22 @@ ul {
 <main class="container">
 <h2>Selected Journal Publications</h2>
 <ol>
+<li><b>PB-PAPP: An Efficient Mechanism for Real-Time Survivor Detection in Disaster Regions</b><br>
+Gowry Sailaja V, Soumajit Pramanik, Subhajit Sidhanta, and Nirnay Ghosh.<br> 
+<i>IEEE Transactions on Mobile Computing (TMC)</i>, 2026.</li>
+
 <li><b>Multilayer Louvain: A Modularity based Community Detection Algorithm for Multilayer Networks</b><br>
 Soumajit Pramanik, Prishni Rateria, Raphael Tackx, Mayank Shukla, Jean-Loup Guillaume, and Bivas Mitra.<br>
 <i>Knowledge and Information Systems (KAIS)</i>, Springer, 2025.</li>
 
+
 <li><b>UniGEN-DDI: Computing Drug–Drug Interactions using a Unified Graph Embedding Network</b><br>
 Somnath Mondal, Debarghya Datta, Soumajit Pramanik, and Rukmankesh Mehra.<br>
 <i>IEEE Transactions on Computational Biology and Bioinformatics (TCBB)</i>, 2025.</li>
+
+<li><b>Reinforcement Learning-Based Autonomous UAV Navigation for CO Source Localization</b><br>
+Pritika Marik, Harshit Kumar Sahu, Chiranjib Ghosh, Amit Ruidas, Soumajit Pramanik, and Avishek Adhikary.<br>
+<i>IEEE Sensors Letters</i>,2025.</li>
 
 <li><b>UNIQORN: Unified Question Answering over RDF Knowledge Graphs and Natural Language Text</b><br>
 Soumajit Pramanik, Jesujoba Alabi, Rishiraj Saha Roy, and Gerhard Weikum.<br>
@@ -178,9 +187,6 @@ Soumajit Pramanik, Qinna Wang, Maximilien Danisch, Jean-Loup Guillaume, and Biva
 Harshit Kumar Sahu, Pritika Marik, Amit Ruidas, Chiranjib Ghosh, Soumajit Pramanik, and Avishek Adhikary.<br>
 <i>IEEE International Conference on Emerging Technology in Autonomous Aerial Vehicles (ETAAV)</i>, 2025.</li>
 
-<li><b>Feed Forward Neural Network Based Automated Gas Source Localization Using UAV: A Case Study on CO2 Source Tracking</b><br>
-Harshit Kumar Sahu, Pritika Marik, Amit Ruidas, Chiranjib Ghosh, Soumajit Pramanik, and Avishek Adhikary.<br>
-<i>IEEE Sensors Conference</i>, 2025.</li>
 
 <li><b>Deep Learning Based Link Prediction for Minimizing Maximum Betweenness</b><br>
 Aashish, Parul Diwakar, Venkata Narendra Kotyada, Rishi Ranjan Singh, and Soumajit Pramanik.<br>
@@ -194,6 +200,10 @@ Debarghya Datta and Soumajit Pramanik.<br>
 Gagan Raj Gupta, Soumajit Pramanik, Milind Thummala, and Anirban Haldar.<br>
 <i>CODS–COMAD</i>, 2024.</li>
 
+<li><b>On the role of micro-categories to characterize event popularity in meetup</b><br>
+Ayan Kumar Bhowmick, Soumajit Pramanik, Sayan Pathak, and Bivas Mitra.<br> 
+<i>AAAI ICWSM</i>, 2021.</li>
+
 <li><b>Complex Temporal Question Answering on Knowledge Graphs</b><br>
 Zhen Jia, Soumajit Pramanik, Rishiraj Saha Roy, and Gerhard Weikum.<br>
 <i>ACM CIKM</i>, 2021.</li>
@@ -202,17 +212,39 @@ Zhen Jia, Soumajit Pramanik, Rishiraj Saha Roy, and Gerhard Weikum.<br>
 Azin Ghazimatin, Soumajit Pramanik, Rishiraj Saha Roy, and Gerhard Weikum.<br>
 <i>The Web Conference (WWW)</i>, 2021.</li>
 
+
+<li><b>On the splitting dynamics of meetup social groups</b><br>
+Ayan Kumar Bhowmick, Soumajit Pramanik, Sayan Pathak, and Bivas Mitra.<br> 
+<i>AAAI ICWSM</i>, 2020.</li>
+
 <li><b>Answering Complex Questions by Joining Multi-Document Evidence with Quasi Knowledge Graphs</b><br>
 Xiaolu Lu, Soumajit Pramanik, Rishiraj Saha Roy, Abdalghani Abujabal, Yafang Wang, and Gerhard Weikum.<br>
 <i>ACM SIGIR</i>, 2019.</li>
 
 <li><b>On the Migration of Researchers across Scientific Domains</b><br>
 Soumajit Pramanik, Surya Teja Gora, Ravi Sundaram, Niloy Ganguly, and Bivas Mitra.<br>
-<i>ICWSM</i>, 2019.</li>
+<i>AAAI ICWSM</i>, 2019.</li>
 
 <li><b>Discovering Community Structure in Multilayer Networks</b><br>
 Soumajit Pramanik, Raphael Tackx, Anchit Navelkar, Jean-Loup Guillaume, and Bivas Mitra.<br>
-<i>IEEE DSAA</i>, 2017.</li>
+<i>IEEE International Conference on Data Science and Advanced Analytics (DSAA)</i>, 2017.</li>
+
+<li><b>Can i foresee the success of my meetup group?</b><br>
+Soumajit Pramanik, Midhun Gundapuneni, Sayan Pathak, and Bivas Mitra.<br>
+<i>IEEE ASONAM</i>,2016.</li>
+
+<li><b>Predicting group success in meetup</b><br>
+Soumajit Pramanik, Midhun Gundapuneni, Sayan Pathak, and Bivas Mitra.<br>
+<i>AAAI ICWSM</i>,2016.</li>
+
+<li><b>On the role of mentions on tweet virality</b><br>
+Soumajit Pramanik, Qinna Wang, Maximilien Danisch, Sumanth Bandi, Anand Kumar, Jean-Loup Guillaume, and Bivas Mitra.<br>
+<i>IEEE International Conference on Data Science and Advanced Analytics (DSAA)</i>, 2016.</li>
+
+
+<li><b>"Whom-to-interact": does conference networking boost your citation count?</b><br>
+Soumajit Pramanik, Pranay Hasan Yerra, and Bivas Mitra.<br>
+<i>ACM IKDD Conference on Data Sciences (CoDS)</i>, 2015.</li>
 </ol>
 </main>
 </body>
